--- a/src/helloworld_pkg/package.xml
+++ b/src/helloworld_pkg/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>pubsub_tut_pkg</name>
+  <name>helloworld_pkg</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Hello World Tutorial Package</description>
   <maintainer email="sumandeep.banerjee@gmail.com">sumandeep</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
