--- a/src/custom_interfaces/package.xml
+++ b/src/custom_interfaces/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>custom_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Custom Interfaces Package</description>
   <maintainer email="sumandeep.banerjee@gmail.com">sumandeep</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
