--- a/src/tutorial_interfaces/package.xml
+++ b/src/tutorial_interfaces/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>tutorial_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Interfaces Tutorial Package</description>
   <maintainer email="sumandeep.banerjee@gmail.com">sumandeep</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>rosidl_default_generators</build_depend>
