--- a/src/polygon_base/package.xml
+++ b/src/polygon_base/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>polygon_base</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Plugin Base Package</description>
   <maintainer email="sumandeep.banerjee@gmail.com">sumandeep</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
